<resources>
    <string name="app_name">C19-Tracker</string>

    <string name="status_kasus">Kasus</string>
    <string name="status_positif">Positif</string>
    <string name="status_sembuh">Sembuh</string>
    <string name="status_mati">Meninggal</string>
    <string name="status_kritis">Kritis Serius</string>
    <string name="status_persentase_global">Persentase Kasus (Global)</string>
    <string name="status_persentase_mati">Persentase Meninggal</string>
    <string name="status_populasi">Kasus Tiap 1 Juta Penduduk</string>

    <string name="profil_name">Moh. Basirudin</string>
    <string name="profil_status">Masih dalam perjalanan</string>
</resources>
