<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_provinsi_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="Provinsi"
                    android:maxLines="1"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_provinsi_kasus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="0 Kasus"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                style="@style/line_grey"
                android:layout_marginVertical="@dimen/dimen_12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/status_positif"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/dimen_12sp" />

                    <TextView
                        android:id="@+id/list_provinsi_positif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorRed"
                        android:textColorHint="@color/colorRed"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/list_provinsi_positif_persen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0%"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorRed"
                        android:textColorHint="@color/colorRed"
                        android:textSize="@dimen/dimen_12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/status_sembuh"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/dimen_12sp" />

                    <TextView
                        android:id="@+id/list_provinsi_sembuh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorGreen"
                        android:textColorHint="@color/colorGreen"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/list_provinsi_sembuh_persen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0%"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorGreen"
                        android:textColorHint="@color/colorGreen"
                        android:textSize="@dimen/dimen_12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/status_mati"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/dimen_12sp" />

                    <TextView
                        android:id="@+id/list_provinsi_mati"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorGrey"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/list_provinsi_mati_persen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="0%"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorGrey"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/dimen_12sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/line_grey"
                android:layout_marginVertical="@dimen/dimen_12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:text="Persentase Kasus Nasional"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/dimen_14sp" />

                <TextView
                    android:id="@+id/list_provinsi_kasus_persen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="0%"
                    android:textColor="@color/colorTextPrimary"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>